--- a/translations/values-ko/strings.xml
+++ b/translations/values-ko/strings.xml
@@ -20,7 +20,7 @@
     <string name="ip_h">IP 주소</string>
     <string name="find_ip">스캔</string>
     <string name="set_ip">IP 지정</string>
-    <string name="ip">WarThunder 을 실행하고 있는 컴퓨터의 IP (without port):</string>
+    <string name="ip">WarThunder 을 실행하고 있는 컴퓨터의 IP (포트 제외):</string>
     
     
     <string name="zoom_btns">확대 버튼</string>
@@ -105,7 +105,7 @@
     
     <string name="ext_unlock">기타 잠금해제</string>
     <string name="ext_unlock_det">
-        "기타는 <b><i>아무</i></b> 후원에 의해 잠금이 풀립니다\n(만약 당신이 후원을하고 코드를 받지 못하였다면 우리에게 이메일을 주십시오)"</string>
+        "기타는 <b><i>여러가지</i></b> 후원에 의해 잠금이 풀립니다\n(만약 당신이 후원을하고 코드를 받지 못하였다면 우리에게 이메일을 주십시오)"</string>
     <string name="ext_unlock_dial">"잠금해제 코드:"</string>
     
     <string name="ext_link">G+ 로 연결</string>
@@ -148,20 +148,20 @@
     <string name="offline_mode">오프라인 모드</string>
     <string name="talk_back">Talk back</string>
     <string name="kills">사살</string>
-    <string name="trigger_words_kill">트리거 단어 삭제</string>
-    <string name="trigger_words_kill_default">파괴,중지,уничтожен</string>
-    <string name="trigger_words_kill_summary">기본: \"destroyed,shot down,уничтожен\"</string>
+    <string name="trigger_words_kill">전차 파괴</string>
+    <string name="trigger_words_kill_default">파괴,전차 파괴!,уничтожен</string>
+    <string name="trigger_words_kill_summary">기본: \"파괴,전차 파괴!,уничтожен\"</string>
     <string name="burns">Burns</string>
-    <string name="trigger_words_burn">불탄 트리거 단어</string>
-    <string name="trigger_words_burn_default">set afire,подожжён</string>
-    <string name="trigger_words_burn_summary">Default value: \"set afire,подожжён\"</string>
+    <string name="trigger_words_burn">타버렸습니다!</string>
+    <string name="trigger_words_burn_default">불이 붙었습니다!,подожжён</string>
+    <string name="trigger_words_burn_summary">Default value: \"불이 붙었습니다!,подожжён\"</string>
     <string name="player_name">게임상의 닉네임</string>
     <string name="ext_unlocked">기타 잠금해제</string>
     <string name="please_restart">새로운 탱크 효과를위하여 앱을 재시작해주세요.</string>
     <string name="planes_in_tank">탱크안에 있는중 비행기를 발견했습니다</string>
     <string name="bomber_path">폭격 경로</string>
     <string name="air_raid_siren">공습 경보</string>
-    <string name="pointicons">Point icons</string>
+    <string name="pointicons">점수 아이콘</string>
     <string name="base_approx_time_remaining">기지가 점령되기까지의 대략적인 시간 표시</string>
     <string name="base_progress_beeping">근처 기지 점령음</string>
     <string name="mapscale">지도 크기</string>
@@ -170,14 +170,14 @@
     <string name="airplane_range">항공기 발각 범위</string>
     <string name="ground_range">지상 발각 </string>
     <string name="connected">연결됨</string>
-    <string name="supporter">지지자</string>
+    <string name="supporter">지원자</string>
     <string name="contributor">후원자</string>
     <string name="contribute_resources">우리의 앱 리소스를 개선시켜주세요</string>
     <string name="waiting_for_battle">전투를 위해 잠시만 기다려주세요</string>
     <string name="subscription">(Subscription)</string>
     <string name="exit_title">이 앱을 종료하시겠습니까?</string>
     <string name="exit_question">연결을 종료하고 이 앱을 종료하시겠습니까?</string>
-    <string name="hide_add_requirement">지지자나 후원자가 되시면 광고를 끌수 있습니다.</string>
+    <string name="hide_add_requirement">지원자나 후원자가 되시면 광고를 끌수 있습니다.</string>
     <string name="coop_start">새로운 협동모드 시작</string>
     <string name="coop_join">협동모드 참여</string>
     <string name="coop_title">협동모드 세션</string>
