--- a/translations/values-de/strings.xml
+++ b/translations/values-de/strings.xml
@@ -191,5 +191,6 @@
     <string name="show_ads_while_not_playing">Zeige Werbung, während man nicht spielt</string>
     <string name="allow_data_collection">Anonyme Datensammlung ermöglichen</string>
     <string name="data_collection_explained">With compliance by Google Analytics rules, helping to make the app better for You.</string>
+    <string name="dynamic_zoom">Dynamic map zooming</string>
 
 </resources>
