--- a/translations/values-hu/strings.xml
+++ b/translations/values-hu/strings.xml
@@ -192,5 +192,6 @@
     <string name="show_ads_while_not_playing">Show ads while not playing</string>
     <string name="allow_data_collection">Allow anonymous data collection</string>
     <string name="data_collection_explained">With compliance by Google Analytics rules, helping to make the app better for You.</string>
+    <string name="dynamic_zoom">Dynamic map zooming</string>
 
 </resources>
