--- a/translations/values-pl/strings.xml
+++ b/translations/values-pl/strings.xml
@@ -191,6 +191,7 @@
     <string name="show_ads_while_not_playing">Wyświetlaj reklamy kiedy nie grasz</string>
 	<string name="allow_data_collection">Allow anonymous data collection</string>
 	<string name="data_collection_explained">With compliance by Google Analytics rules, helping to make the app better for You.</string>
+    <string name="dynamic_zoom">Dynamic map zooming</string>
 
 
 </resources>
