--- a/translations/values-ru/strings.xml
+++ b/translations/values-ru/strings.xml
@@ -192,5 +192,6 @@
     <string name="show_ads_while_not_playing">Показывать рекламу вне боя</string>
     <string name="allow_data_collection">Собирать анонимную статистику</string>
     <string name="data_collection_explained">С соблюдением правил Google Analytics, это помогает улучшать приложение для Вас.</string>
+    <string name="dynamic_zoom">Dynamic map zooming</string>
 
 </resources>
